# omega-automata

./: README.md  setup.cfg
omega_automata/: buchi.py  lts.py
